--- a/frontend/todo/src/app/login/login.component.html
+++ b/frontend/todo/src/app/login/login.component.html
@@ -7,5 +7,5 @@
   {{username}}
 
   <!-- <button class="btn btn-success" (click)="handleLogin()">Login</button> -->
-  <button class="btn btn-success" (click)="handleBasicAuthLogin()">Login</button>
+  <button class="btn btn-success" (click)="handleJWTBasicAuthLogin()">Login</button>
 </div>
